Add more instructions in readme